test/Fail/Issue4450.err
Issue4450.agda:15.1-14: error: [SafeFlagEta]
Cannot use ETA pragma with safe flag.
